--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
     <link rel="stylesheet" href="./demo.css">
-    <script src="./demo.js"></script>
 </head>
 <body>
-    <div class="box">这是测试代码</div>
+    <div id="app">这是测试代码</div>
 </body>
 </html>
